# arachne

./: .gitignore  README.md  plan.txt  pyproject.toml
arachne/: cli.py  config.py  conversation.py  engine.py  executor.py  instance.py
arachne/backends/: __init__.py  base.py  claude.py  ollama.py  test.py
plans/: plan_v1.txt  plan_v2.txt  skill_memory_section.txt
