[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arachne"
version = "0.1.0"
description = "A project-embedded AI assistant spider for local research and coding collaboration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dillon Bass", email = "bassdillon10@gmail.com"}
]
license = {text = "MIT"}
keywords = ["ai", "assistant", "local", "project", "spider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
arachne = "arachne.cli:main"

[tool.setuptools]
packages = ["arachne"]
